--- a/_layouts/terms.html
+++ b/_layouts/terms.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
-    <title>Terms</title>
+    <link href="/static/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="/static/img/favicon.ico" rel="apple-touch-icon">
+    <title>Terms and Conditions</title>
     <style>
         .middle{
             width: 940px;
@@ -16,6 +18,11 @@
         .content{
             padding-top: 20px;
         }
+        .content h1{
+            text-align: center;
+            padding-bottom: 10px;
+        }
+        a:visited,a:link,a:hover,a:active{color:#333}
 
         @media (min-width: 320px) and (max-width: 768px) {
             .middle {
@@ -30,7 +37,7 @@
 <div class="middle">
     <div class="content">
         <h1>Terms and Conditions</h1>
-        <p>By accessing webpages eosstablecoin.com (“the Website”) or cross chain gateway (“the Gateway”) you (“you, your or yourself”) are agreeing to accept and comply with the terms and conditions stated below (“Terms of Use”). You should read the entire Terms of Use carefully before using the Website or the Gateway.</p>
+        <p>By accessing webpages <a href="https://eosstablecoin.com" target="_blank">eosstablecoin.com</a> (“the Website”) or cross chain gateway (“the Gateway”) you (“you, your or yourself”) are agreeing to accept and comply with the terms and conditions stated below (“Terms of Use”). You should read the entire Terms of Use carefully before using the Website or the Gateway.</p>
         <p>The Website and the Gateway are operated by Piehash Limited (“the Company”). a private incorporation which is registered in Republic of Seychelles.</p>
     </div>
     <div class="content">
