--- a/_layouts/terms.html
+++ b/_layouts/terms.html
@@ -38,7 +38,7 @@
     <div class="content">
         <h1>Terms and Conditions</h1>
         <p>By accessing webpages <a href="https://eosstablecoin.com" target="_blank">eosstablecoin.com</a> (“the Website”) or cross chain gateway (“the Gateway”) you (“you, your or yourself”) are agreeing to accept and comply with the terms and conditions stated below (“Terms of Use”). You should read the entire Terms of Use carefully before using the Website or the Gateway.</p>
-        <p>The Website and the Gateway are operated by Piehash Limited (“the Company”), a private limited company registered in Republic of Seychelles.</p>
+        <p>The Website and the Gateway are operated by Piehash Limited (“the Company”), a private limited company registered at Republic of Seychelles.</p>
     </div>
     <div class="content">
         <h2>Use of the Website materials</h2>
