--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -103,7 +103,7 @@
                 <ul>
                     <li><span>BTC <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips" title="">1YSscuNjW4hDDCPgvP8q9JfZmNEDBrEWu</small></li>
                     <li><span>BTC <strong tkey="cwb"></strong></span><small class="greens cold "    title=""></small></li>
-                    <li><span>BTC <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>
+                    <!--<li><span>BTC <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>-->
                     <li><span>EBTC <strong tkey="ic"></strong></span><small class="greens eosvalue"    title="" ></small></li>
                 </ul>
             </div>
@@ -118,7 +118,7 @@
                 <ul>
                     <li><span>ETH <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips" title="">0xf64edd94558ca8b3a0e3b362e20bb13ff52ea513</small></li>
                     <li><span>ETH <strong tkey="cwb"></strong></span><small class="greens cold"    title=""></small></li>
-                    <li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>
+                    <!--<li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>-->
                     <li><span>EETH <strong tkey="ic"></strong></span><small class="greens eosvalue"    title="" ></small></li>
                 </ul>
             </div>
@@ -133,7 +133,7 @@
                 <ul>
                     <li><span>USDT <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips">15SZafVE21z1vL6qRmwK6aZiLnDCNfVkH3</small></li>
                     <li><span>USDT <strong tkey="cwb"></strong></span><small class="greens cold"    title="" ></small></li>
-                    <li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>
+                    <!--<li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>-->
                     <li><span>EUSD <strong tkey="ic"></strong></span><small class="greens eosvalue"    title=""></small></li>
                 </ul>
             </div>
