--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -131,8 +131,10 @@
             </h4>
             <div class="audit-list">
                 <ul>
-                    <li><span>USDT <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips">15SZafVE21z1vL6qRmwK6aZiLnDCNfVkH3</small></li>
+                    <li><span>USDT <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul"><span class="address1">15SZafVE21z1vL6qRmwK6aZiLnDCNfVkH3</span><span class="address2">1DR5XnVdym8VD5eWLJrApdfpPKs8fgQNo9</span></small></li>
                     <li><span>USDT <strong tkey="cwb"></strong></span><small class="greens cold"    title="" ></small></li>
+                    <!--<li><span>USDT <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips"></small></li>-->
+                    <!--<li><span>USDT <strong tkey="hwb"></strong></span><small class="greens hot" title=""></small></li>-->
                     <!--<li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>-->
                     <li><span>EUSD <strong tkey="ic"></strong></span><small class="greens eosvalue"    title=""></small></li>
                 </ul>
