--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -116,9 +116,11 @@
             </h4>
             <div class="audit-list">
                 <ul>
+                    <li><span>ETH <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address1">0x5c9f3fff6ee846a83080f373f8cea1451bb4a3d9</span></small></li>
+                    <li><span>ETH <strong tkey="hwb"></strong></span><small class="greens hot"    title=""></small></li>
                     <li><span>ETH <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address1">0xf64edd94558ca8b3a0e3b362e20bb13ff52ea513</span></small></li>
                     <li><span>ETH <strong tkey="cwb"></strong></span><small class="greens cold"    title=""></small></li>
-                    <!--<li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>-->
+                    <li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>
                     <li><span>EETH <strong tkey="ic"></strong></span><small class="greens eosvalue"    title="" ></small></li>
                 </ul>
             </div>
@@ -131,11 +133,13 @@
             </h4>
             <div class="audit-list">
                 <ul>
-                    <li><span>USDT <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul"><span class="address1">15SZafVE21z1vL6qRmwK6aZiLnDCNfVkH3</span><span class="address2">1DR5XnVdym8VD5eWLJrApdfpPKs8fgQNo9</span></small></li>
+                    <li><span>USDT <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul"><span class="address1">1DR5XnVdym8VD5eWLJrApdfpPKs8fgQNo9</span></small></li>
+                    <li><span>USDT <strong tkey="hwb"></strong></span><small class="greens hot" title=""></small></li>
+                    <li><span>USDT <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul"><span class="address1">15SZafVE21z1vL6qRmwK6aZiLnDCNfVkH3</span></small></li>
                     <li><span>USDT <strong tkey="cwb"></strong></span><small class="greens cold"    title="" ></small></li>
                     <!--<li><span>USDT <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips"></small></li>-->
                     <!--<li><span>USDT <strong tkey="hwb"></strong></span><small class="greens hot" title=""></small></li>-->
-                    <!--<li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>-->
+                    <li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>
                     <li><span>EUSD <strong tkey="ic"></strong></span><small class="greens eosvalue"    title=""></small></li>
                 </ul>
             </div>
