--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -93,7 +93,7 @@
 <div class="fund" id="transparency">
     <div class="container">
         <h3 tkey="support"></h3>
-        <div class="audit-section btc">
+        <div class="audit-section BTC">
             <h4 class="audit-des">
                 <strong>BTC</strong>
                 <span class="info-tips" tkey="infotips"></span>
@@ -108,7 +108,7 @@
                 </ul>
             </div>
         </div>
-        <div class="audit-section eth">
+        <div class="audit-section ETH">
             <h4 class="audit-des">
                 <strong>ETH</strong>
                 <span class="info-tips" tkey="infotips"></span>
@@ -125,7 +125,7 @@
                 </ul>
             </div>
         </div>
-        <div class="audit-section usdt">
+        <div class="audit-section USDT">
             <h4 class="audit-des">
                 <strong>USDT</strong>
                 <span class="info-tips" tkey="infotips"></span>
