--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -104,7 +104,7 @@
                     <li><span>BTC <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address1">1YSscuNjW4hDDCPgvP8q9JfZmNEDBrEWu</span></small></li>
                     <li><span>BTC <strong tkey="cwb"></strong></span><small class="greens cold "    title=""></small></li>
                     <!--<li><span>BTC <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>-->
-                    <li><span>EBTC <strong tkey="ic"></strong></span><small class="greens eosvalue"    title="" ></small></li>
+                    <li><span class="evalue">EBTC <strong tkey="ic"></strong><span class="valuetips"></span><span class="evalue-info" tkey="evaluetips"></span></span><small class="greens eosvalue"    title="" ></small></li>
                 </ul>
             </div>
         </div>
@@ -121,7 +121,7 @@
                     <li><span>ETH <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address1">0xf64edd94558ca8b3a0e3b362e20bb13ff52ea513</span></small></li>
                     <li><span>ETH <strong tkey="cwb"></strong></span><small class="greens cold"    title=""></small></li>
                     <li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>
-                    <li><span>EETH <strong tkey="ic"></strong></span><small class="greens eosvalue"    title="" ></small></li>
+                    <li><span class="evalue">EETH <strong tkey="ic"></strong><span class="valuetips"></span><span class="evalue-info" tkey="evaluetips"></span></span><small class="greens eosvalue"    title="" ></small></li>
                 </ul>
             </div>
         </div>
@@ -140,7 +140,7 @@
                     <!--<li><span>USDT <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips"></small></li>-->
                     <!--<li><span>USDT <strong tkey="hwb"></strong></span><small class="greens hot" title=""></small></li>-->
                     <li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>
-                    <li><span>EUSD <strong tkey="ic"></strong></span><small class="greens eosvalue"    title=""></small></li>
+                    <li><span class="evalue">EUSD <strong tkey="ic"></strong><span class="valuetips"></span><span class="evalue-info" tkey="evaluetips"></span> </span><small class="greens eosvalue"    title=""></small></li>
                 </ul>
             </div>
         </div>
