--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./static/css/style.css">
     <script type="text/javascript" src="./static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="./static/js/big.min.js"></script>
+
     <title tkey="eosstablecoin"></title>
 </head>
 <body>
@@ -120,7 +122,7 @@
                     <li><span>ETH <strong tkey="hwb"></strong></span><small class="greens hot"    title=""></small></li>
                     <li><span>ETH <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address1">0xf64edd94558ca8b3a0e3b362e20bb13ff52ea513</span></small></li>
                     <li><span>ETH <strong tkey="cwb"></strong></span><small class="greens cold"    title=""></small></li>
-                    <!--<li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>-->
+                    <li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>
                     <li><span class="evalue">EETH <strong tkey="ic"></strong><span class="valuetips"></span><span class="evalue-info" tkey="evaluetips"></span></span><small class="greens eosvalue"    title="" ></small></li>
                 </ul>
             </div>
@@ -139,7 +141,7 @@
                     <li><span>USDT <strong tkey="cwb"></strong></span><small class="greens cold"    title="" ></small></li>
                     <!--<li><span>USDT <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips"></small></li>-->
                     <!--<li><span>USDT <strong tkey="hwb"></strong></span><small class="greens hot" title=""></small></li>-->
-                    <!--<li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>-->
+                    <li><span>USDT <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>
                     <li><span class="evalue">EUSD <strong tkey="ic"></strong><span class="valuetips"></span><span class="evalue-info" tkey="evaluetips"></span> </span><small class="greens eosvalue"    title=""></small></li>
                 </ul>
             </div>
