add cold address

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -121,6 +121,7 @@
                     <li><span>ETH <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address1">0x5c9f3fff6ee846a83080f373f8cea1451bb4a3d9</span></small></li>
                     <li><span>ETH <strong tkey="hwb"></strong></span><small class="greens hot"    title=""></small></li>
                     <li><span>ETH <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address1">0xf64edd94558ca8b3a0e3b362e20bb13ff52ea513</span></small></li>
+                    <li><span>ETH <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul" title=""><span class="address2">0x7cdcb09dbe6fd3f87b419d8c094b0b607faeed5f</span></small></li>
                     <li><span>ETH <strong tkey="cwb"></strong></span><small class="greens cold"    title=""></small></li>
                     <li><span>ETH <strong tkey="tb"></strong></span><small class="greens total"    title="" ></small></li>
                     <li><span class="evalue">EETH <strong tkey="ic"></strong><span class="valuetips"></span><span class="evalue-info" tkey="evaluetips"></span></span><small class="greens eosvalue"    title="" ></small></li>
@@ -152,9 +153,16 @@
     <div class="container">
         <h3 tkey="supwalleteos"></h3>
         <div class="partner-info">
-            <a href="https://bitpie.com" target="_blank"><img src="./static/img/bitpie@2x.png"></a><a href="https://hoo.com" target="_blank"><img src="./static/img/hoo@2x.png"></a><a href="https://www.whaleex.com/" target="_blank"><img src="./static/img/whaleex@2x.png"></a>
-            <a href="https://newdex.io/" target="_blank"><img src="./static/img/newdex@2x.png"></a><a href="https://findex.pro" target="_blank"><img src="./static/img/findex@2x.png"></a><a href="https://betdice.one/" target="_blank"><img src="./static/img/betdice@2x.png"></a><a href="https://eosjacks.com/" target="_blank"><img src="./static/img/eosjacks@2x.png"></a>
-            <a href="https://eospoker.win/" target="_blank"><img src="./static/img/eospoker@2x.png"></a><a href="https://big.game/" target="_blank"><img src="./static/img/biggame@2x.png"></a><a href="https://endless.game/" target="_blank"><img src="./static/img/endless@2x.png"></a>
+            <a href="https://bitpie.com" target="_blank"><img src="./static/img/bitpie@2x.png"></a>
+            <a href="https://hoo.com" target="_blank"><img src="./static/img/hoo@2x.png"></a>
+            <a href="https://www.whaleex.com/" target="_blank"><img src="./static/img/whaleex@2x.png"></a>
+            <a href="https://newdex.io/" target="_blank"><img src="./static/img/newdex@2x.png"></a>
+            <a href="https://findex.pro" target="_blank"><img src="./static/img/findex@2x.png"></a>
+            <a href="https://betdice.one/" target="_blank"><img src="./static/img/betdice@2x.png"></a>
+            <a href="https://eosjacks.com/" target="_blank"><img src="./static/img/eosjacks@2x.png"></a>
+            <a href="https://eospoker.win/" target="_blank"><img src="./static/img/eospoker@2x.png"></a>
+            <a href="https://big.game/" target="_blank"><img src="./static/img/biggame@2x.png"></a>
+            <a href="https://endless.game/" target="_blank"><img src="./static/img/endless@2x.png"></a>
 
         </div>
     </div>
