--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -107,6 +107,7 @@
                     <li><span>BTC <strong tkey="cwb"></strong></span><small class="greens cold "    title=""></small></li>
                     <!--<li><span>BTC <strong tkey="tb"></strong></span><small class="greens total"    title=""></small></li>-->
                     <li><span class="evalue">EBTC <strong tkey="ic"></strong><span class="valuetips"></span><span class="evalue-info" tkey="evaluetips"></span></span><small class="greens eosvalue"    title="" ></small></li>
+                    <li><span>EBTC <strong tkey="authorized_not_issued"></strong></span><small class="greens not_issued "    title=""></small></li>
                 </ul>
             </div>
         </div>
@@ -136,7 +137,7 @@
             </h4>
             <div class="audit-list">
                 <ul>
-                    <li><span>USDT <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul"><span class="address1">1DR5XnVdym8VD5eWLJrApdfpPKs8fgQNo9</span></small></li>
+                    <!--<li><span>USDT <strong tkey="hwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul"><span class="address1"></span></small></li>-->
                     <li><span>USDT <strong tkey="hwb"></strong></span><small class="greens hot" title=""></small></li>
                     <li><span>USDT <strong tkey="cwa"></strong></span><span class="mobileshow" tkey="displayaddress"></span><small class="greens address-tips mul"><span class="address1">15SZafVE21z1vL6qRmwK6aZiLnDCNfVkH3</span></small></li>
                     <li><span>USDT <strong tkey="cwb"></strong></span><small class="greens cold"    title="" ></small></li>
