--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,9 @@
 </head>
 <body>
 <div class="header">
+    <div class="container" align="center" style="color: #fff2f0;background-color: #2a7ae2;font-size: 20px" >
+        <h1 tkey="eosstable_notice"></h1>
+    </div>
     <div class="container">
         <div class="logo">
             <img class="imglogo" src="./static/img/logo.png">
